# mailforagents.com

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
content/blog/: README.md
content/comparisons/: README.md
content/integrations/: README.md
content/playbooks/: README.md
src/: main.rs
static/: site.css
templates/: home.html  not_found.html
