[package]
name = "mailforagents-site"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
askama = "0.16.0"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.7.0", features = ["compression-gzip", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

